fixed Cards text alignment

--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,7 @@
     }
     
     #contentBox {
-        padding: 16px 0px 24px 0px;
+        padding: 2em 5em 0em 2em;
     }
 
     html
